# WorldCup2026

./: .gitignore  Makefile  README.md  evaluate_2022.py  forces.py  pyproject.toml  requirements.txt  sim_2014.py  sim_2018.py  sim_2022.py  sim_2026.py  train.py
.github/workflows/: deploy.yaml  jekyll-docker.yml  simulate_world_cup_2026.yaml  update_simulations.yaml  web_deploy.yaml
data/: all_matchups.csv  chaveamento_probs.csv  new_results.csv  probs_fase_de_grupos.csv  results.csv  summary.csv  world_cup_results.csv
data/raw/: fifa_ranking_2010.csv  fifa_ranking_2014.csv  fifa_ranking_2018.csv  fifa_ranking_2022.csv  jogos_2014.csv  jogos_2018.csv  jogos_2022.csv
docs/: album.html  calendario.html  chances.html  equipe.html  index.html  midia.html  modelos.html  previsoes.html  vis.html
docs/css/: album.css  calendario.css  chances.css  midia.css  previsoes.css  styles.css
docs/js/: calendario.js  chances.js  chaveamento.js  main.js  previsoes.js  vis.js
model_sel/: README.md  evaluate_2014.py  evaluate_2018.py  evaluate_2022.py  validate.py
notebooks/: bolao.ipynb  consulta.ipynb  elo_poisson_model.ipynb
simulations/: README.md  export_all_matchups.py  sim_2014.py  sim_2018.py  sim_2022.py  sim_2026.py  train_2026.py  update_2026.py
src/: README.md  constants.py  dashboard.py  data_prep.py  evaluation.py  export_probs.py  fetch_kaggle_dataset.py  forces.py  simulate.py  simulation.py  weights_evolution.py
src/analysis/: __init__.py  evaluation.py  forces.py  weights.py
src/data/: __init__.py  loader.py
src/freq_model/: data_classes.py  dixon_coles_base.py  model.py  simulate.py  tournament.py  utils.py
src/model/: base.py  bayesian.py  frequentist.py  params.py  utils.py
src/model_sel/: validate.py
src/output/: __init__.py  dashboard.py  (+1 more)
stan_models/: README.md  n_dc_noranking.stan  n_dc_ranking.stan  n_poisson_noranking.stan  n_poisson_ranking  n_poisson_ranking.stan  st_dc_noranking.stan  st_dc_ranking.stan  st_poisson_noranking.stan  st_poisson_ranking.stan
(+51 files in other folders)
