[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldcup2026"
version = "0.1.0"
description = "Predictive models and data analysis for the 2026 FIFA World Cup"
authors = [{ name = "Igor Michels", email = "igorpmichels@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.0",
    "pandas>=2.0.0",
    "kagglehub>=0.2.9",
    "plotly>=6.6.0",
    "kaleido>=1.2.0",
    "scipy>=1.10.0",
    "nbformat>=5.10.4",
    "cmdstanpy>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.3.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
ml = [
    "scipy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup2026"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-include = ["src/**/*.py"]
exclude = ["data", ".venv", "2022Cup"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "PIE",
]

[tool.ruff.lint.per-file-ignores]
"src/simulate.py" = ["E402"]
"src/freq_model/simulate.py" = ["E402"]
"src/fetch_kaggle_dataset.py" = ["E402"]
"src/output/dashboard.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["worldcup2026"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
